environments/dev/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prixfixe-api-server
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      name: prixfixe-api-server
      labels:
        app: api-server
    spec:
      imagePullSecrets:
        - name: registry-dev-prixfixe
      containers:
        - name: api-server-container
          image: registry.digitalocean.com/dev-prixfixe/api_server:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config
              mountPath: "/config/"
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: prixfixe-api-configuration
---
apiVersion: v1
kind: Service
metadata:
  name: prixfixe-api-service
  namespace: dev
  labels:
    app: prixfixe-api
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-name: "api.prixfixe.dev"
    service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
    service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: "true"
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-type: "cookies"
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-name: "prixfixecookie"
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-ttl: "60"
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "api.prixfixe.dev"
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "1"
    external-dns.alpha.kubernetes.io/hostname: "api.prixfixe.dev."
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-port: "80"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-protocol: "http"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: "/health"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-check-interval-seconds: "3"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-response-timeout-seconds: "5"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-unhealthy-threshold: "3"
#    service.beta.kubernetes.io/do-loadbalancer-healthcheck-healthy-threshold: "5"
spec:
  type: LoadBalancer
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8000
  selector:
    app: prixfixe-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: api-ingress
spec:
  rules:
    - host: api.prixfixe.dev
      http:
        paths:
          - backend:
              serviceName: prixfixe-api-service
              servicePort: 8000
            path: /
---
